tests/fail/conflicting_generics.stderr
error: Circular injection chain detected: ConflictingGenerics already depends on GenericBase
 --> tests/fail/conflicting_generics.rs:8:1
  |
8 | #[inject_fields(GenericBase<i32>, GenericBase<String>)]  // should fail - conflicting types for 'data'
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `inject_fields` (in Nightly builds, run with -Z macro-backtrace for more info)
